src/tests/routes/me/snapshots/integration__routes__me__get__me-6.snap
---
source: src/tests/routes/me/get.rs
expression: response.json()
---
{
  "owned_crates": [
    {
      "email_notifications": true,
      "id": 1,
      "name": "foo_my_packages"
    }
  ],
  "user": {
    "api_mfa_enabled": false,
    "avatar": null,
    "created_at": "[datetime]",
    "email": "foo@example.com",
    "email_pending": null,
    "email_verification_sent": true,
    "email_verified": true,
    "id": 1,
    "is_admin": false,
    "login": "foo",
    "name": null,
    "publish_notifications": true,
    "url": "https://github.com/foo"
  }
}
